<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_menu"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_name" />
            <item
                android:id="@+id/action_sort_height"
                android:title="@string/sort_height" />
            <item
                android:id="@+id/action_sort_number"
                android:title="@string/sort_number" />
        </menu>
    </item>
</menu>
